lessons6/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: lesson6-service
spec:
  selector:
    app: lesson6-app
  ports:
    - port: 8000
      targetPort: 8000
      protocol: TCP
      name: http
  type: NodePort
