lessons6/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: lesson6-ingress
  labels:
    app: lesson6-service
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  ingressClassName: nginx
  rules:
  - host: arch.homework
    http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: lesson6-service
              port:
                number: 8000
        - path: /test
          pathType: Prefix
          backend:
            service:
              name: nginx-service
              port:
                number: 80
